Still trying to fix Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/FeaturesFinal.html
+++ b/FeaturesFinal.html
@@ -26,13 +26,12 @@
 </h1>
 </center>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <div class="images">
 	<center>
-	<img class="mySlides" src="time.png" style="width:40%">
+	<img class="mySlides" src="assets/time.PNG" style="width:40%">
 
-  	<img class="mySlides" src="connect.png" style="width:50%">
-  	<img class="mySlides" src="organize.png" style="width:55%">
+  	<img class="mySlides" src="assets/connect.PNG" style="width:50%">
+  	<img class="mySlides" src="assets/organize.PNG" style="width:55%">
 
 	<a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
 	<a class="w3-btn-floating w3-display-right" onclick="plusDivs(1)">&#10095;</a>
