--- a/teampageFinal.html
+++ b/teampageFinal.html
@@ -40,31 +40,31 @@
 <center>
 	<div class="wrapper">
 		<!-- <table> -->
-    		<img id="slide" src="chantale.png">
+    		<img id="slide" src="assets/chantale.PNG">
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper2">
 		<!-- <table> -->
-    		<img id="slide" src="tiler.png" >
+    		<img id="slide" src="assets/tiler.PNG" >
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper3">
 		<!-- <table> -->
-    		<img id="slide" src="sherri.png" >
+    		<img id="slide" src="assets/sherri.PNG" >
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper4">
 		<!-- <table> -->
-    		<img id="slide" src="ury.png" >
+    		<img id="slide" src="assets/ury.PNG" >
     	<!-- </table> -->
     	<br>
 	</div>
 	<div class="wrapper5">
 		<!-- <table> -->
-    		<img id="slide" src="chrys.png" >
+    		<img id="slide" src="assets/chrys.PNG" >
     	<!-- </table> -->
     	<br>
 	</div>
