My bad!!!!!! Signed-off-by: Chantalt108 <ctseu025@uottawa.ca>

--- a/signupFinal.html
+++ b/signupFinal.html
@@ -28,15 +28,15 @@
 		</h1>
 		<script>
 			function battery1() {
-				document.getElementById("battery (2).png").src="battery (3).png"
+				document.getElementById("assets/battery (2).png").src="assets/battery (3).png"
 			}
 
 			function battery2() {
-				document.getElementById("battery (2).png").src="battery (4).png"
+				document.getElementById("assets/battery (2).png").src="assets/battery (4).png"
 			}
 		</script>
 		<br>
-		<img id="battery (2).png" src="battery (2).png">
+		<img id="assets/battery (2).png" src="assets/battery (2).png">
 		<br>
 		<div class="center" style="margin:0 auto;">
 			<center>
